--- a/test.html
+++ b/test.html
@@ -451,24 +451,22 @@
     <div class="footer-links">
 	  <a style="color: black; text-decoration: underline; text-decoration-thickness: 3px;" onclick="showImpressum()">Impressum</a>
 	  <a href="mailto:info@lostbalcony.eu">Contact</a>
-	</div>
-	<div class="social-list">
 		<div class="soc-item"> <a href="http://google.persoenliches-georgien.de" target="_blank">
 			<span class="socicon-google socicon mbr-iconfont mbr-iconfont-social" title="Google"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="mailto:?body=%0AUnter%20persoenliches-georgien.de%20findest%20Du%20neue%20Ideen%20f%C3%BCr%20Deinen%20n%C3%A4chsten%20%23Super.jpegaubGeorgien.%0ABeginn Deine%20Reiseplanung%20unter%3A%20http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html%0A&subject=.jpegaubstipp">
+		<div class="soc-item"> <a href="mailto:?body=%0AUnter%20persoenliches-georgien.de%20findest%20Du%20neue%20Ideen%20f%C3%BCr%20Deinen%20n%C3%A4chsten%20%23SuperurlaubGeorgien.%0ABeginn Deine%20Reiseplanung%20unter%3A%20http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html%0A&subject=Urlaubstipp">
 			<span class="socicon-mail socicon mbr-iconfont mbr-iconfont-social" title="E-Mail senden"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+persoenliches-georgien.de+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23Super.jpegaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Tweet senden" target="_blank">
+		<div class="soc-item"> <a href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+persoenliches-georgien.de+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Tweet senden" target="_blank">
 			<span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://telegram.me/share/.jpeg?.jpeg=persoenliches-georgien.de+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23Super.jpegaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Bei Telegram teilen" target="_blank">
+		<div class="soc-item"> <a href="https://telegram.me/share/url?url=persoenliches-georgien.de+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Bei Telegram teilen" target="_blank">
 			<span class="socicon-telegram socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
 		<div class="soc-item"> <a href="https://www.facebook.com/PersoenlichesGeorgien/" title="Facebook Gruppe" target="_blank">
 			<span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23Super.jpegaubGeorgien%3F+https%3A%2F%2Fpersoenliches-georgien.de%2F
+		<div class="soc-item"> <a href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23SuperurlaubGeorgien%3F+https%3A%2F%2Fpersoenliches-georgien.de%2F
 " title="WhatsApp" target="_blank">
 			<span class="socicon-whatsapp socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
@@ -478,7 +476,7 @@
 		<div class="soc-item"> <a href="https://instagram.com/persoenlichesgeorgien/" title="Instagram Beiträge" target="_blank">
 			<span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://www.pinterest.de/pin/create/button/?.jpeg=https://persoenliches-georgien.de&media=https://persoenliches-georgien.de/images/DeGeorgien.png&description=persoenliches-georgien.de" title="Auf Pinterest teilen" target="_blank">
+		<div class="soc-item"> <a href="https://www.pinterest.de/pin/create/button/?url=https://persoenliches-georgien.de&media=https://persoenliches-georgien.de/images/DeGeorgien.png&description=persoenliches-georgien.de" title="Auf Pinterest teilen" target="_blank">
 			<span class="socicon-pinterest socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
 		<div class="soc-item"> <a href="https://tiktok.com/@DeGeorgien" title="TikTok Beiträge" target="_blank">
@@ -487,20 +485,20 @@
 		<div class="soc-item"> <a href="https://www.behance.net/DeGeorgien" title="Behance Projekte" target="_blank">
 			<span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://share.flipboard.com/bookmarklet/popout?v=2&title=persoenliches-georgien.de&.jpeg=https%3A%2F%2Fpersoenliches-georgien.de" title="In FlipBoard teilen" target="_blank">
+		<div class="soc-item"> <a href="https://share.flipboard.com/bookmarklet/popout?v=2&title=persoenliches-georgien.de&url=https%3A%2F%2Fpersoenliches-georgien.de" title="In FlipBoard teilen" target="_blank">
 			<span class="socicon-flipboard socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://getpocket.com/save?.jpeg=https%3A%2F%2Fpersoenliches-georgien.de" title="Mit Pocket teilen" target="_blank">
+		<div class="soc-item"> <a href="https://getpocket.com/save?url=https%3A%2F%2Fpersoenliches-georgien.de" title="Mit Pocket teilen" target="_blank">
 			<span class="socicon-pocket socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
 		<div class="soc-item"> <a href="https://degeorgien.tumblr.com/" title="In Tumblr weitere Ideen finden" target="_blank">
 			<span class="socicon-tumblr socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://www.xing.com/spi/shares/new?.jpeg=https://persoenliches-georgien.de" title="Auf Xing teilen" 
+		<div class="soc-item"> <a href="https://www.xing.com/spi/shares/new?url=https://persoenliches-georgien.de" title="Auf Xing teilen" 
 		  onclick="window.open(this.href, 'xing', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 			<span class="socicon-xing socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
-		<div class="soc-item"> <a href="https://www.linkedin.com/shareArticle?mini=true&.jpeg=https://persoenliches-georgien.de&title=persoenliches-georgien.de&summary=persoenliches-georgien.de&source=persoenliches-georgien.de" title="Auf LinkedIn teilen" 
+		<div class="soc-item"> <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://persoenliches-georgien.de&title=persoenliches-georgien.de&summary=persoenliches-georgien.de&source=persoenliches-georgien.de" title="Auf LinkedIn teilen" 
 		  onclick="window.open(this.href, 'linkedin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 			<span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
 		  </a> </div>
