--- a/test.html
+++ b/test.html
@@ -188,53 +188,53 @@
 	  </div>
 	  <select onchange="changeLang.call(this, event)" id="language-picker-select">
 	    <!-- Bulgarien --> 
-        <option value="bg">&#x1F1E7;&#x1F1EC; &nbsp; BG - Bǎlgariya</option>
+        <option value="bg" disabled>&#x1F1E7;&#x1F1EC; &nbsp; BG - Bǎlgariya</option>
 		<option value="de" selected="selected">&#x1F1E9;&#x1F1EA; &nbsp; DE - Deutsch</option>
 		<!-- Dänemark -->
-		<option value="dk">&#x1F1E9;&#x1F1F0; &nbsp; DK - dansk</option>
+		<option value="dk" disabled>&#x1F1E9;&#x1F1F0; &nbsp; DK - dansk</option>
 		<!-- Estland -->
-		<option value="ee">&#x1F1EA;&#x1F1EA; &nbsp; EE - eesti keel</option>
+		<option value="ee" disabled>&#x1F1EA;&#x1F1EA; &nbsp; EE - eesti keel</option>
 		<!-- Griechenland -->
 		<option value="en">&#x1F1EC;&#x1F1E7; &nbsp; EN - English</option>
 		<!-- Spanien -->
-		<option value="es">&#x1F1EA;&#x1F1F8; &nbsp; ES - español</option>
+		<option value="es" disabled>&#x1F1EA;&#x1F1F8; &nbsp; ES - español</option>
 		<!-- Finnland -->
-		<option value="fi">&#x1F1EB;&#x1F1EE; &nbsp; FI - suomi</option>
+		<option value="fi" disabled>&#x1F1EB;&#x1F1EE; &nbsp; FI - suomi</option>
 		<option value="fr">&#x1F1EB;&#x1F1F7; &nbsp; FR - français</option>
 		<!-- Georgien -->
 		<option value="ge">&#x1F1EC;&#x1F1EA; &nbsp; GE - kartuli</option>
-		<option value="gr">&#x1F1EC;&#x1F1F7; &nbsp; GR - modern greek</option>
+		<option value="gr" disabled>&#x1F1EC;&#x1F1F7; &nbsp; GR - modern greek</option>
 		<!-- Kroatien -->
-		<option value="hr">&#x1F1ED;&#x1F1F7; &nbsp; HR - hrvatski</option>
+		<option value="hr" disabled>&#x1F1ED;&#x1F1F7; &nbsp; HR - hrvatski</option>
 		<!-- Ungarn -->
-		<option value="hu">&#x1F1ED;&#x1F1FA; &nbsp; HU - magyar</option>
+		<option value="hu" disabled>&#x1F1ED;&#x1F1FA; &nbsp; HU - magyar</option>
 		<!-- Irish -->
-		<option value="ie">&#x1F1EE;&#x1F1EA; &nbsp; IE - Gaelic</option>
-		<option value="it">&#x1F1EE;&#x1F1F9; &nbsp; IT - italiano</option>
+		<option value="ie" disabled>&#x1F1EE;&#x1F1EA; &nbsp; IE - Gaelic</option>
+		<option value="it" disabled>&#x1F1EE;&#x1F1F9; &nbsp; IT - italiano</option>
 		<!-- Litauen -->
-		<option value="lt">&#x1F1F1;&#x1F1F9; &nbsp; LT - lietuvių kalba</option>
+		<option value="lt" disabled>&#x1F1F1;&#x1F1F9; &nbsp; LT - lietuvių kalba</option>
 		<!-- Lettland -->
-		<option value="lv">&#x1F1F1;&#x1F1FB; &nbsp; LV - latviešu valoda</option>
+		<option value="lv" disabled>&#x1F1F1;&#x1F1FB; &nbsp; LV - latviešu valoda</option>
 		<!-- Moldau (Moldawien) -->
-		<option value="md">&#x1F1F2;&#x1F1E9; &nbsp; MD - moldovenească</option>
+		<option value="md" disabled>&#x1F1F2;&#x1F1E9; &nbsp; MD - moldovenească</option>
 		<!-- Malata -->
-		<option value="mt">&#x1F1F2;&#x1F1F9; &nbsp; MT - Malti</option>
+		<option value="mt" disabled>&#x1F1F2;&#x1F1F9; &nbsp; MT - Malti</option>
 		<!-- Niederlande -->
 		<option value="nl">&#x1F1F3;&#x1F1F1; &nbsp; NL - Nederlands</option>
 		<!-- Polen -->
-		<option value="pl">&#x1F1F5;&#x1F1F1; &nbsp; PL - polski</option>
+		<option value="pl" disabled>&#x1F1F5;&#x1F1F1; &nbsp; PL - polski</option>
 		<!-- Portugal -->
-		<option value="pt">&#x1F1F5;&#x1F1F9; &nbsp; PT - português</option>
+		<option value="pt" disabled>&#x1F1F5;&#x1F1F9; &nbsp; PT - português</option>
 		<!-- Rumänien -->
-		<option value="ro">&#x1F1F7;&#x1F1F4; &nbsp; RO - română</option>
+		<option value="ro" disabled>&#x1F1F7;&#x1F1F4; &nbsp; RO - română</option>
 		<!-- Slowakei -->
-		<option value="sk">&#x1F1F8;&#x1F1F0; &nbsp; SK - slovenčina</option>
+		<option value="sk" disabled>&#x1F1F8;&#x1F1F0; &nbsp; SK - slovenčina</option>
 		<!-- Slowenien -->
-		<option value="si">&#x1F1F8;&#x1F1EE; &nbsp; SI - slovenščina</option>
+		<option value="si" disabled>&#x1F1F8;&#x1F1EE; &nbsp; SI - slovenščina</option>
 		<!-- schweden -->
-		<option value="se">&#x1F1F8;&#x1F1EA; &nbsp; SE - svenska</option>
+		<option value="se" disabled>&#x1F1F8;&#x1F1EA; &nbsp; SE - svenska</option>
 		<!-- Ukraine -->
-		<option value="ua">&#x1F1FA;&#x1F1E6; &nbsp; UA - ukrainska</option>
+		<option value="ua" disabled>&#x1F1FA;&#x1F1E6; &nbsp; UA - ukrainska</option>
       </select>
     </nav>
     <a id="gallery-title" onclick="showMission()">
@@ -451,27 +451,27 @@
     <div class="footer-links">
 	  <a style="color: black; text-decoration: underline; text-decoration-thickness: 3px;" onclick="showImpressum()">Impressum</a>
 	  <a href="mailto:info@lostbalcony.eu">Contact</a> &nbsp; &nbsp; &nbsp;
-	  <a style="color: black; text-decoration: none;" href="mailto:?body=%0AUnter%20persoenliches-georgien.de%20findest%20Du%20neue%20Ideen%20f%C3%BCr%20Deinen%20n%C3%A4chsten%20%23SuperurlaubGeorgien.%0ABeginn Deine%20Reiseplanung%20unter%3A%20http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html%0A&subject=Urlaubstipp">
+	  <a style="color: black; text-decoration: none;" href="mailto:?body=%0AInformationen%20zur%20Online-Initiative%20%23lostbalcony%20findest%20Du%20unter%3A%20http%3A%2F%2Flostbalcony.eu%0A&subject=%23lostbalcony">
 		<span class="socicon-mail socicon mbr-iconfont mbr-iconfont-social" title="E-Mail senden"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+persoenliches-georgien.de+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Tweet senden" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+lostbalcony.eu+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Flostbalcony.eu%2Fde.html" title="Tweet senden" target="_blank">
 		<span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
 	  <a style="color: black; text-decoration: none;" href="https://www.facebook.com/PersoenlichesGeorgien/" title="Facebook Gruppe" target="_blank">
 		<span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://www.xing.com/spi/shares/new?url=https://persoenliches-georgien.de" title="Auf Xing teilen" 
+	  <a style="color: black; text-decoration: none;" href="https://www.xing.com/spi/shares/new?url=http://lostbalcony.eu" title="Auf Xing teilen" 
 	  onclick="window.open(this.href, 'xing', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 		<span class="socicon-xing socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://www.linkedin.com/shareArticle?mini=true&url=https://persoenliches-georgien.de&title=persoenliches-georgien.de&summary=persoenliches-georgien.de&source=persoenliches-georgien.de" title="Auf LinkedIn teilen" 
+	  <a style="color: black; text-decoration: none;" href="http://www.linkedin.com/shareArticle?mini=true&url=http://lostbalcony.eu&title=lostbalcony.eu&summary=lostbalcony.eu&source=lostbalcony.eu" title="Auf LinkedIn teilen" 
 	  onclick="window.open(this.href, 'linkedin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 		<span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://telegram.me/share/url?url=persoenliches-georgien.de+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Bei Telegram teilen" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://telegram.me/share/url?url=lostbalcony.eu+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Flostbalcony.eu%2Fplan.html" title="Bei Telegram teilen" target="_blank">
 		<span class="socicon-telegram socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23SuperurlaubGeorgien%3F+https%3A%2F%2Fpersoenliches-georgien.de%2F
+	  <a style="color: black; text-decoration: none;" href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23SuperurlaubGeorgien%3F+http%3A%2F%2Flostbalcony.eu%2F
 " title="WhatsApp" target="_blank">
 		<span class="socicon-whatsapp socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
