--- a/test.html
+++ b/test.html
@@ -471,25 +471,24 @@
 	  <a style="color: black; text-decoration: none;" href="mailto:?body=%0AInformationen%20zur%20Online-Initiative%20%23lostbalcony%20findest%20Du%20unter%3A%20http%3A%2F%2Flostbalcony.eu%0A&subject=%23lostbalcony">
 		<span class="socicon-mail socicon mbr-iconfont mbr-iconfont-social" title="E-Mail senden"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+lostbalcony.eu+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Flostbalcony.eu%2Fde.html" title="Tweet senden" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://twitter.com/intent/tweet?text=%40lostbalcony+twittert+zu+%23lostbalcony+und+http%3A%2F%2Flostbalcony.eu" title="Tweet senden" target="_blank">
 		<span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://www.facebook.com/PersoenlichesGeorgien/" title="Facebook Gruppe" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://www.facebook.com/lostbalcony/" title="Facebook Gruppe" target="_blank">
 		<span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
 	  <a style="color: black; text-decoration: none;" href="https://www.xing.com/spi/shares/new?url=http://lostbalcony.eu" title="Auf Xing teilen" 
 	  onclick="window.open(this.href, 'xing', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 		<span class="socicon-xing socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="http://www.linkedin.com/shareArticle?mini=true&url=http://lostbalcony.eu&title=lostbalcony.eu&summary=lostbalcony.eu&source=lostbalcony.eu" title="Auf LinkedIn teilen" 
+	  <a style="color: black; text-decoration: none;" href="http://www.linkedin.com/shareArticle?mini=true&url=http://lostbalcony.eu&title=%23lostbalcony&summary=%23lostbalcony&source=%23lostbalcony" title="Auf LinkedIn teilen" 
 	  onclick="window.open(this.href, 'linkedin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
 		<span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://telegram.me/share/url?url=lostbalcony.eu+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Flostbalcony.eu%2Fplan.html" title="Bei Telegram teilen" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://telegram.me/share/url?url=Informationen+zu%23lostbalcony+gibt+es+unter+http%3A%2F%2Flostbalcony.eu" title="Bei Telegram teilen" target="_blank">
 		<span class="socicon-telegram socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23SuperurlaubGeorgien%3F+http%3A%2F%2Flostbalcony.eu%2F
-" title="WhatsApp" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://api.whatsapp.com/send?text=Informationen+zu%23lostbalcony+gibt+es+unter+http%3A%2F%2Flostbalcony.eu" title="WhatsApp" target="_blank">
 		<span class="socicon-whatsapp socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
 	</div>
