--- a/test.html
+++ b/test.html
@@ -474,7 +474,7 @@
 	  <a style="color: black; text-decoration: none;" href="https://twitter.com/intent/tweet?text=%40lostbalcony+twittert+zu+%23lostbalcony+und+http%3A%2F%2Flostbalcony.eu" title="Tweet senden" target="_blank">
 		<span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
-	  <a style="color: black; text-decoration: none;" href="https://www.facebook.com/lostbalcony/" title="Facebook Gruppe" target="_blank">
+	  <a style="color: black; text-decoration: none;" href="https://www.facebook.com/Lostbalcony/" title="Facebook Gruppe" target="_blank">
 		<span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
 	  </a> &nbsp;
 	  <a style="color: black; text-decoration: none;" href="https://www.xing.com/spi/shares/new?url=http://lostbalcony.eu" title="Auf Xing teilen" 
