minor fix for 4

--- a/test.html
+++ b/test.html
@@ -283,7 +283,7 @@
     <div class="gallery-img gallery1 gallery3 gallery4 gallery7 img-7">
       <div><a href="#">Tbilissi</a></div>
     </div>
-    <div class="gallery-img gallery3 gallery7 img-8">
+    <div class="gallery-img gallery3 gallery4 gallery7 img-8">
       <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img gallery7 img-9">
