--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
 	"sk": "Nielen stratený balkón Európy!",
 	"si": "Ne samo izgubljeni balkon Evrope!",
 	"se": "Inte bara Europas förlorade balkong!",
-	"ua": "Ne tilʹky vtrachenyy balkon Yevropy!"};
+	"ua": "Не тільки втрачений балкон Європи!"};
 
   var georgiaByLang = {
     "bg": "Gruziya",
@@ -70,7 +70,7 @@
 	"sk": "Gruzínsko",
 	"si": "Gruzija",
 	"se": "Georgien",
-	"ua": "Hruziya"};
+	"ua": "Грузія"};
 
   function showMission() {
     // Create a popup text window
@@ -188,17 +188,11 @@
   </script>
 </head>
 <body class="wrapper-main" onLoad="initPage();">
-<div class="gallery1">
-</div>
-<div class="gallery2">
-</div>
-<div class="gallery3">
-</div>
-<div class="gallery4">
-</div>
-<div class="gallery7">
-</div>
-<br><br>
+<span class="gallery1"></span>
+<span class="gallery2"></span>
+<span class="gallery3"></span>
+<span class="gallery4"></span>
+<span class="gallery7"></span>
 <header id="header-main">
     <nav>
       <div style="margin-top: 10px; margin-bottom: 20px;">
@@ -221,7 +215,7 @@
 		<option value="fi" disabled>&#x1F1EB;&#x1F1EE; &nbsp; FI - suomi</option>
 		<option value="fr">&#x1F1EB;&#x1F1F7; &nbsp; FR - français</option>
 		<!-- Georgien -->
-		<option value="ge">&#x1F1EC;&#x1F1EA; &nbsp; GE - kartuli</option>
+		<option value="ge">&#x1F1EC;&#x1F1EA; &nbsp; GE - ქართული</option>
 		<option value="gr" disabled>&#x1F1EC;&#x1F1F7; &nbsp; GR - modern greek</option>
 		<!-- Kroatien -->
 		<option value="hr" disabled>&#x1F1ED;&#x1F1F7; &nbsp; HR - hrvatski</option>
@@ -253,7 +247,7 @@
 		<!-- schweden -->
 		<option value="se" disabled>&#x1F1F8;&#x1F1EA; &nbsp; SE - svenska</option>
 		<!-- Ukraine -->
-		<option value="ua" disabled>&#x1F1FA;&#x1F1E6; &nbsp; UA - ukrainska</option>
+		<option value="ua">&#x1F1FA;&#x1F1E6; &nbsp; UA - українська</option>
       </select>
     </nav>
     <a id="gallery-title" onclick="showMission()">
