--- a/dk.html
+++ b/dk.html
@@ -1,27 +1,32 @@
-mission
+Mission
 
-#lostbalcony er et online initiativ, der advarer om tabet af Georgien som Europas balkon. Risikoen for, at Georgien i 2022, i kølvandet på en brutal krig i Ukraine, glemmer sine forhåbninger om at blive medlem af Den Europæiske Union (EU), ville være en historisk fejl. Ligesom Ukraine og Moldova er Georgien en del af Europa.
+#lostbalcony er et online initiativ, der advarer om tabet af Georgien som Europas balkon. Georgien omtales ofte som "Europas Balkon" på grund af sin placering i udkanten af ​​Europa, mellem Europa og Asien, den er historisk tæt knyttet til Europa.
 
-Ofte omtalt som "Europas Balkon" på grund af sin placering i udkanten af ​​Europa, mellem Europa og Asien, har Georgien tætte historiske bånd til Europa.
+Risikoen for, at Georgien i 2022, i kølvandet på en brutal krig i Ukraine, glemmer sine forhåbninger om at blive medlem af Den Europæiske Union (EU), ville være en historisk fejl. Ligesom Ukraine og Moldova er Georgien en del af Europa.
 
 Spredningen af ​​Homo erectus fra Afrika til Europa er bevist ved igangværende udgravninger i Georgien. Disse viser, hvordan tidlige mennesker kan findes i Dmanisi - i det sydlige Georgien - for 2 millioner år siden.
 En anden form for europæisk kulturarv er vindyrkning, som har en lang tradition i Georgien og går tilbage til 6.000 år f.Kr. Chr. har sat spor. Udgravninger viser dyrkning af dyrkede vinstokke, som stadig dyrkes i dag.
 
-Mens Georgiens forhold til Rusland som en vigtig nabo i Kaukasus og Georgien som en del af Sovjetunionen prægede Georgiens historie i det 19. og 20. århundrede, er det ingen grund til at udelukke Georgien fra den europæiske familie.
+Mens Georgiens forhold til Rusland som en vigtig nabo i Kaukasus og Georgien som en del af Sovjetunionen prægede Georgiens historie i det 19. og 20. århundrede, er dette ingen grund til at udelukke Georgien fra den europæiske familie.
 
 Georgien har altid søgt et tæt forhold til Europa, og de tidligere spinkle geostrategiske grunde burde afløses i det 21. århundrede:
 
 Allerede mellem 1713 og 1716 besøgte Sulhan-Zaba Orbeliani, en georgisk prins, munk, diplomat og forfatter, paven og den franske konge Ludvig XIV på vegne af den georgiske konge for at forbinde Georgien med Vesteuropa. Den senere kong Erekle II's (7. november 1720 – 11. januar 1798) udenrigspolitik var også stærkt europæisk orienteret. Han søgte alliancer med forskellige europæiske regeringer mod Persien og Osmannerriget, men fandt ingen støtte.
 
 Det var først i 1783, at kong Erekle II underskrev en traktat med den russiske tsarina Catherine II for at beskytte ham mod den persiske horde og hans tropper, hvori han forpligtede sig til at anerkende det russiske protektorat og at stille sine væbnede styrker i russerens tjeneste. Imperium.
+
 I slaget ved Krtsanisi måtte Georgien dog møde perserne alene uden russisk støtte, og georgierne blev besejret.
 
 Men fordi Rusland var i stand til yderligere at udvide sin indflydelsessfære i det sydlige Kaukasus i det 19. århundrede, var en uafhængig georgisk stat umulig.
-Det var først ved det russiske imperiums sammenbrud i februarrevolutionen i 1917, at den første Demokratiske Republik Georgien (DRG) blev grundlagt i 1918-1921.
+
+Det var først ved sammenbruddet af det russiske imperium i februarrevolutionen i 1917, at den første Demokratiske Republik Georgien (DRG) blev grundlagt i 1918-1921.
+
 Den 16. februar 1921 blev DRG besat af den røde hær og indlemmet i Sovjetunionen som den georgiske socialistiske sovjetrepublik indtil udgangen af ​​1991.
 
 For Georgiens vedkommende blev genvinding af selvstændigheden efterfulgt af en "mørk" periode med valgsvindel, udbredt korruption, kriminalitet og stagnation af økonomien på et meget lavt niveau, men siden 2000'erne er ønsket om uigenkaldeligt at opnå uafhængighed fra Rusland blevet befæstet i Georgiens udenrigspolitik. politik lave.
-En geopolitisk konflikt, der med Ruslands sikkerhedsinteresser på den ene side og den tilnærmelse Georgien sigter efter til Vesten, NATO, USA og EU, har gennem konflikter inden for Georgien som Kaukasuskrigen i 2008 vist, at Georgien igen historisk har blevet efterladt alene.
+
+En geopolitisk konflikt, som med Ruslands sikkerhedsinteresser på den ene side og den tilnærmelse Georgien sigter efter til Vesten, NATO, USA og EU, har gennem konflikter inden for Georgien som Kaukasuskrigen i 2008 vist, at Georgien igen historisk har blevet efterladt alene.
 
 Selvom Georgiens optagelse i EU måske ikke er på dagsordenen i dag, i betragtning af den nuværende politiske situation, må landet ikke overlades til sin store nabos vilkårlighed.
-Sammen ønsker dette initiativ at sende et politisk signal mod Georgien som #lostbalcony med billeder af altaner i Georgien. Georgien som kandidat til EU er et politisk tegn, og det skal ikke kun ses som et ubeskriveligt smukt Urlaubland på kanten af ​​Europa, men som en del af Europa med en fremtid i EU.
+
+Sammen ønsker dette initiativ at sende et politisk signal mod Georgien som #lostbalcony med billeder af altaner i Georgien. Georgien som kandidat til EU er et politisk tegn, og det skal ikke kun ses som en ubeskrivelig smuk feriedestination på kanten af ​​Europa, men som en del af Europa med en fremtid i EU.
