--- a/bg.html
+++ b/bg.html
@@ -1,27 +1,80 @@
-misiya
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Bǎlgariya</title>
+  <link rel="stylesheet" href="css/main.css">
+  <style>
+body {
+  margin: 0 auto;
+  margin-left: 20px;
+  margin-right: 20px; 
+  width: 95%;
+  text-align: justify;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 20px;
+}
 
-#lostbalcony e onlaĭn initsiativa, preduprezhdavashta za zagubata na Gruziya kato balkona na Evropa. Riskŭt prez 2022 g., v rezultat na brutalnata voĭna v Ukraĭna, Gruziya da zabravi za stremezhite si da se prisŭedini kŭm Evropeĭskiya sŭyuz (ES) bi bil istoricheska greshka. Sŭshto kato Ukraĭna i Moldova, Gruziya e chast ot Evropa.
+body p {
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}  </style>
+</head>
+<body>
+<h2>misiya</h2>
+<p><span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> e onlaĭn initsiativa, preduprezhdavashta za zagubata na Gruziya kato balkona na Evropa. Riskŭt prez 2022 g., v rezultat na brutalnata voĭna v Ukraĭna, Gruziya da zabravi za stremezhite si da se prisŭedini kŭm Evropeĭskiya sŭyuz (ES) bi bil istoricheska greshka. Sŭshto kato Ukraĭna i Moldova, Gruziya e chast ot Evropa.</p>
 
-Chesto narichana "Balkonŭt na Evropa" poradi mestopolozhenieto si na rŭba na Evropa, mezhdu Evropa i Aziya, Gruziya ima blizki istoricheski vrŭzki s Evropa.
+<p>Chesto narichana "Balkonŭt na Evropa" poradi mestopolozhenieto si na rŭba na Evropa, mezhdu Evropa i Aziya, Gruziya ima blizki istoricheski vrŭzki s Evropa.</p>
 
-Razprostranenieto na Homo erectus ot Afrika v Evropa e dokazano ot nastoyashtite razkopki v Gruziya. Te pokazvat kak rannite khora mogat da bŭdat namereni v Dmanisi - v Yuzhna Gruziya - predi 2 miliona godini.
-Druga forma na evropeĭsko kulturno nasledstvo e lozarstvoto, koeto ima dŭlga traditsiya v Gruziya i datira ot 6000 godini pr.n.e. Khr.e ostavil sledi. Razkopkite pokazvat otglezhdaneto na kultivirani lozya, koito se otglezhdat i do dnes.
+<p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="160" align=right style="margin-left: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> Razprostranenieto na Homo erectus ot Afrika v Evropa e dokazano ot nastoyashtite razkopki v Gruziya. Te pokazvat kak rannite khora mogat da bŭdat namereni v Dmanisi - v Yuzhna Gruziya - predi 2 miliona godini.<br/>
+Druga forma na evropeĭsko kulturno nasledstvo e lozarstvoto, koeto ima dŭlga traditsiya v Gruziya i datira ot 6000 godini pr.n.e. Khr.e ostavil sledi. Razkopkite pokazvat otglezhdaneto na kultivirani lozya, koito se otglezhdat i do dnes.</p>
 
-Vŭpreki che otnosheniyata na Gruziya s Rusiya kato osnoven sŭsed v Kavkaz i Gruziya kato chast ot Sŭvet·skiya sŭyuz oformikha istoriyata na Gruziya prez 19-ti i 20-ti vek, tova ne e prichina Gruziya da bŭde izklyuchena ot evropeĭskoto semeĭstvo.
+<p>Vŭpreki che otnosheniyata na Gruziya s Rusiya kato osnoven sŭsed v Kavkaz i Gruziya kato chast ot Sŭvet·skiya sŭyuz oformikha istoriyata na Gruziya prez 19-ti i 20-ti vek, tova ne e prichina Gruziya da bŭde izklyuchena ot evropeĭskoto semeĭstvo.</p>
 
-Gruziya vinagi se e stremyala kŭm blizki otnosheniya s Evropa i predishnite krekhki geostrategicheski prichini tryabva da bŭdat zameneni prez 21 vek:
+<p>Gruziya vinagi se e stremyala kŭm blizki otnosheniya s Evropa i predishnite krekhki geostrategicheski prichini tryabva da bŭdat zameneni prez 21 vek:</p>
 
-Oshte mezhdu 1713 i 1716 g. Sulkhan-Zaba Orbeliani, gruzinski prints, monakh, diplomat i pisatel, poseshtava papata i frenskiya kral Lui XIV ot imeto na gruzinskiya kral, za da svŭrzhe Gruziya sŭs Zapadna Evropa. Vŭnshnata politika na po-kŭsniya kral Erekli II (7 noemvri 1720 – 11 yanuari 1798) sŭshto e silno evropeĭska. Toĭ tŭrsi sŭyuzi s razlichni evropeĭski pravitelstva sreshtu Persiya i Osmanskata imperiya, no ne namira podkrepa.
+<p><table border="0"><tr>
+<td><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/></a>Oshte mezhdu 1713 i 1716 g. <a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank">Sulkhan-Zaba Orbeliani</a>, gruzinski prints, monakh, diplomat i pisatel, poseshtava papata i frenskiya kral Lui XIV ot imeto na gruzinskiya kral, za da svŭrzhe Gruziya sŭs Zapadna Evropa. </td>
+<td style="width: 5%;">&nbsp;</td>
+<td><a href="https://de.wikipedia.org/wiki/Erekle_II." target="_blank"><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/></a>Vŭnshnata politika na po-kŭsniya <a href="https://de.wikipedia.org/wiki/Erekle_II." target="_blank">kral Erekli II</a> (7 noemvri 1720 – 11 yanuari 1798) sŭshto e silno evropeĭska. Toĭ tŭrsi sŭyuzi s razlichni evropeĭski pravitelstva sreshtu Persiya i Osmanskata imperiya, no ne namira podkrepa.
+</td>
+</tr></table>
+<p>Edva prez 1783 g.  podpisva dogovor s ruskata tsaritsa Ekaterina II, za da go zashtiti ot persiĭskata orda i negovite voĭski, v koĭto toĭ se zadŭlzhava da priznae ruskiya protektorat i da postavi vŭorŭzhenite si sili v usluga na ruskite Imperiya.<br/>
+V bitkata pri Krtsanisi obache Gruziya tryabvashe da se izpravi sreshtu persite sama bez ruska podkrepa i gruzintsite byakha pobedeni.</p>
+<p><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien" target="_blank"><img src="img/mission/Flag_of_Georgia_(1918–1921).svg.png" width="140" align=left style="margin-top:10px; margin-right: 10px;" alt="" title="Flagge der DRG"/></a>Vŭpreki tova, tŭĭ kato Rusiya uspya da razshiri dopŭlnitelno svoyata sfera na vliyanie v Yuzhen Kavkaz prez 19 vek, nezavisima gruzinska dŭrzhava beshe nevŭzmozhna.<br/>
+Edva sled razpadaneto na Ruskata imperiya prez Fevruarskata revolyutsiya ot 1917 g. prez 1918-1921 g. e osnovana pŭrvata Demokratichna republika Gruziya (DRG).<br/>
+Na 16 fevruari 1921 g. DRG e okupirana ot Chervenata armiya i e vklyuchena v Sŭvet·skiya sŭyuz kato Gruzinska sŭvet·ska sotsialisticheska republika do kraya na 1991 g.</p>
+<p><img src="img/mission/Flag_of_Georgia.svg.png" width="140" align=right style="margin-top:10px; margin-left: 10px;" alt="" title="Flagge Georgiens"/>Za Gruziya vŭzstanovyavaneto na nezavisimostta beshe posledvano ot „tŭmen“ period s izborni izmami, shiroko razprostranena koruptsiya, prestŭpnost i stagnatsiya na ikonomikata na mnogo nisko nivo, no ot 2000-te godini zhelanieto za neobratimo poluchavane na nezavisimost ot Rusiya se zatvŭrdi vŭv vŭnshnata politika na Gruziya pravi politika.<br/>
+Geopoliticheski konflikt, koĭto s interesite na sigurnostta na Rusiya ot edna strana i sblizhavaneto, kŭm koeto Gruziya se stremi sŭs Zapada, NATO, SASHT i ES, pokaza chrez konflikti v <a href="https://en.wikipedia.org/wiki/Russo-Georgian_War" target="_blank">Gruziya kato Kavkazkata voĭna prez 2008</a> g., che Gruziya otnovo istoricheski ostana sam.</p>
+<p>Dori i priemaneto na Gruziya v ES da ne e na dneven red dnes, predvid nastoyashtata politicheska situatsiya, stranata ne tryabva da bŭde ostavyana na proizvola na golemiya si sŭsed.<br/>
+Zaedno tazi initsiativa iska da izprati politicheski signal sreshtu Gruziya kato <span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> sŭs snimki na balkoni v Gruziya. Gruziya kato kandidat za ES e politicheski znak i tryabva da se razglezhda ne samo kato neopisuemo krasiva .jpegaubsland na rŭba na Evropa, no i kato chast ot Evropa s bŭdeshte v ES.</p>
+</body>
+</html>
 
-Edva prez 1783 g. kral Erekliĭ II podpisva dogovor s ruskata tsaritsa Ekaterina II, za da go zashtiti ot persiĭskata orda i negovite voĭski, v koĭto toĭ se zadŭlzhava da priznae ruskiya protektorat i da postavi vŭorŭzhenite si sili v usluga na ruskite Imperiya.
-V bitkata pri Krtsanisi obache Gruziya tryabvashe da se izpravi sreshtu persite sama bez ruska podkrepa i gruzintsite byakha pobedeni.
 
-Vŭpreki tova, tŭĭ kato Rusiya uspya da razshiri dopŭlnitelno svoyata sfera na vliyanie v Yuzhen Kavkaz prez 19 vek, nezavisima gruzinska dŭrzhava beshe nevŭzmozhna.
-Edva sled razpadaneto na Ruskata imperiya prez Fevruarskata revolyutsiya ot 1917 g. prez 1918-1921 g. e osnovana pŭrvata Demokratichna republika Gruziya (DRG).
-Na 16 fevruari 1921 g. DRG e okupirana ot Chervenata armiya i e vklyuchena v Sŭvet·skiya sŭyuz kato Gruzinska sŭvet·ska sotsialisticheska republika do kraya na 1991 g.
 
-Za Gruziya vŭzstanovyavaneto na nezavisimostta beshe posledvano ot „tŭmen“ period s izborni izmami, shiroko razprostranena koruptsiya, prestŭpnost i stagnatsiya na ikonomikata na mnogo nisko nivo, no ot 2000-te godini zhelanieto za neobratimo poluchavane na nezavisimost ot Rusiya se zatvŭrdi vŭv vŭnshnata politika na Gruziya pravi politika.
-Geopoliticheski konflikt, koĭto s interesite na sigurnostta na Rusiya ot edna strana i sblizhavaneto, kŭm koeto Gruziya se stremi sŭs Zapada, NATO, SASHT i ES, pokaza chrez konflikti v Gruziya kato Kavkazkata voĭna prez 2008 g., che Gruziya otnovo istoricheski ostana sam.
 
-Dori i priemaneto na Gruziya v ES da ne e na dneven red dnes, predvid nastoyashtata politicheska situatsiya, stranata ne tryabva da bŭde ostavyana na proizvola na golemiya si sŭsed.
-Zaedno tazi initsiativa iska da izprati politicheski signal sreshtu Gruziya kato #lostbalcony sŭs snimki na balkoni v Gruziya. Gruziya kato kandidat za ES e politicheski znak i tryabva da se razglezhda ne samo kato neopisuemo krasiva .jpegaubsland na rŭba na Evropa, no i kato chast ot Evropa s bŭdeshte v ES.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
